--- a/style.css
+++ b/style.css
@@ -5,28 +5,30 @@
 }
 
 .container {
-    padding: 0 300px;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.hero {
+    background-image: url(./img/header-background.png);
+    height: 768px;
+    display: flex;
+}
+
+.hero .container {
+    display: flex;
 }
 
 .header {
-    background-image: url(./img/header-background.png);
-    height: 768px;
+    background-color: #05022D;
+    padding: 13px 0;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
-    background-color: #05022D;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.nav__left {
-    padding: 13px 0;
+    
 }
 
 .nav__right, .nav__list, .nav__contacts {
@@ -58,14 +60,15 @@
     color: #A551C1;
     border-bottom: 1px solid;
     transition: all .6s;
-    font-size: 15px;
+    font-size: 13px;
+    text-shadow: 5px 10px 3px #B798E0;
 }
 
 .nav__contacts {
     gap: 26px;
 }
 
-.nav__contacts p {
+.nav__contacts .number {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
@@ -80,6 +83,139 @@
 
 .nav__contacts a:hover {
     color: #A551C1 !important;
-    transform: scale(1.3);
+    transform: scale(1.1);
     transition: all .6s;
+}
+
+.hero__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 31px;
+}
+
+.hero__title h1 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 55px;
+    color: #FFFFFF;
+}
+
+.hero__title p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 45px;
+    color: #FFFFFF;
+}
+
+.what-waiting {
+    margin-top: 140px;
+}
+
+.what-waiting h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 37px;
+}
+
+.what-waiting__content {
+    display: flex;
+}
+
+.what-waiting__image {
+    margin-right: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.what-waiting__text {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.wwt__check-and-text {
+    display: flex;
+    gap: 55px;
+    align-items: center;
+}
+
+.wwt__check-and-text p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 30px;
+    color: #000000;
+}
+
+.cooperation {
+    padding: 140px 0;
+}
+
+.cooperation h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 133px;
+}
+
+.cooperation__block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cooperation__block--left {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.cooperation__block--right {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.cb__content {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+.cb__content span {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 60px;
+    line-height: 45px;  
+    display: flex;
+    align-items: flex-end;
+    color: #FFFFFF;
+    text-shadow: 2px 0 #B798E0, -2px 0 #B798E0, 0 2px #B798E0, 0 -2px #B798E0;
+}
+
+.cb__content p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 25px;  
 }
